# schema-enforcer

./: .dockerignore  .gitignore  .pydocstyle.ini  .travis.yml  .yamllint  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  ansible.cfg  pyproject.toml  requirements.txt  tasks.py  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: ansible_command.md  configuration.md  custom_validators.md  mapping_data_files_to_schemas.md  mapping_schemas.md  schema_command.md  validate_command.md
examples/: pyproject.toml  schema.cfg
examples/ansible/: inventory.ini  pyproject.toml
examples/ansible/group_vars/: leaf.yml  nyc.yml  spine.yml
examples/ansible/inventory/: simpleplugin.yml
examples/ansible/inventory_plugins/: simpleplugin.py
examples/ansible/schema/definitions/properties/: ip.yml
examples/ansible/schema/schemas/: interfaces.yml
examples/ansible2/group_vars/: leaf.yml  spine.yml
examples/ansible2/schema/definitions/arrays/: ip.yml
examples/ansible2/schema/schemas/: leafs.yml  spines.yml
examples/ansible3/: inventory.yml  pyproject.toml
examples/ansible3/host_vars/az_phx_pe01/: base.yml
examples/ansible3/host_vars/az_phx_pe02/: base.yml
examples/ansible3/validators/: check_interfaces.py
examples/example1/: pyproject.toml
examples/example1/chi-beijing-rt1/: dns.yml  syslog.yml
examples/example1/eng-london-rt1/: dns.yml
examples/example1/hostvars/eng-london-rt1/: ntp.yml
examples/example1/hostvars/fail-tests/: ntp.yml
examples/example1/hostvars/usa-nyc-rt1/: dns.yml
examples/example1/inventory/group_vars/: apac.yml  emea.yml  na.yml
examples/example1/schema/schemas/: dns.yml  ntp.yml  syslog.yml
examples/example2/: README.md  pyproject.toml
examples/example2/hostvars/eng-london-rt1/: ntp.yml
examples/example2/hostvars/ger-berlin-rt1/: dns_v2.yml
examples/example2/schema/definitions/arrays/: ip_v2.yml
examples/example2/schema/definitions/objects/: ip_v2.yml
examples/example2/schema/schemas/: syslog.yml
examples/example2/schema/schemas/dns/: v1.yml  v2.yml
examples/example3/: pyproject.toml
examples/example3/hostvars/eng-london-rt1/: ntp.yml
examples/example3/hostvars/fail-tests/: dns.yml
examples/example3/hostvars/mex-mxc-rt1/: hostvars.yml
examples/example3/hostvars/usa-lax-rt1/: dns.yml
examples/example3/inventory/: inventory
examples/example3/inventory/group_vars/: all.yml  lax.yml
examples/example3/schema/definitions/objects/: ip.yml
examples/example3/schema/definitions/properties/: ip.yml
examples/example3/schema/schemas/: ntp.yml
examples/example4/: pyproject.toml
examples/example4/host_vars/az_rtr_01/: peers.yml
examples/example4/host_vars/az_rtr_02/: peers.yml
examples/example4/validators/: check_arin.py
examples/hostvars/chi-beijing-rt1/: dns.yml  syslog.yml
examples/hostvars/eng-london-rt1/: dns.yml  ntp.yml
examples/hostvars/fail-tests/: ntp.yml
examples/hostvars/mex-mxc-rt1/: dns.yml  syslog.yml
examples/hostvars/usa-lax-rt1/: dns.yml  syslog.yml
examples/hostvars/usa-nyc-rt1/: syslog.yml
examples/inventory/group_vars/: apac.yml  na.yml  nyc.yml
examples/schema/json/full_schemas/: dns.json  syslog.json
examples/schema/json/schemas/: dns.json  ntp.json  syslog.json
examples/schema/yaml/definitions/objects/: ip.yml
examples/schema/yaml/schemas/: dns.yml  ntp.yml  syslog.yml
jsonschema_testing/: __init__.py  ansible_inventory.py  cli.py  config.py  exceptions.py  test_schema.py  utils.py  validation.py
jsonschema_testing/instances/: file.py
jsonschema_testing/schemas/: jsonschema.py  manager.py
schema_enforcer/: __init__.py  ansible_inventory.py  cli.py  config.py  exceptions.py  utils.py  validation.py
schema_enforcer/instances/: file.py
schema_enforcer/schemas/: jsonschema.py  manager.py  validator.py
tests/: conftest.py  test_ansible_inventory.py  test_cli.py  test_cli_ansible_exists.py  test_cli_ansible_not_exists.py  test_config.py  test_config_settings.py  test_custom_error_messages.py  test_data_against_schema.py  test_instances.py  test_instances_instance_file.py  test_instances_instance_file_manager.py  test_jsonschema.py  test_schema_validation.py  test_schemas_pydantic_validators.py  test_schemas_schema_manager.py  test_schemas_validator.py  test_utils.py  test_utils_ansible_inventory.py  test_validator.py
tests/fixtures/test_config/: pyproject.toml  pyproject2.toml  pyproject_invalid_attr.toml
tests/fixtures/test_instances/: pyproject.toml
tests/fixtures/test_manager/dump/: all.txt  byid.txt
tests/fixtures/test_manager/invalid/: pyproject.toml
tests/fixtures/test_validators/inventory/: inventory.yml
tests/fixtures/test_validators/validators/: check_hostname.py  check_interfaces.py  check_interfaces_ipv4.py  check_peers.py
tests/fixtures/test_validators_pydantic/: pyproject.toml
tests/mocks/dns/invalid/: invalid_format.json  invalid_format.yml  invalid_ip.json  invalid_ip.yml  missing_required.json  missing_required.yml
tests/mocks/dns/valid/: partial_implementation.json
tests/mocks/inventory/: hosts
tests/mocks/inventory/group_vars/: all.yml  emea.yml  ios.yml  na.yml
tests/mocks/ntp/invalid/: invalid_format.json  invalid_format.yml  invalid_ip.json  invalid_ip.yml  missing_required.json  missing_required.yml
tests/mocks/ntp/valid/: full_implementation.json  partial_implementation.json
tests/mocks/schema/json/full_schemas/: ntp.json
tests/mocks/syslog/invalid/: invalid_format.json  invalid_format.yml  invalid_ip.json  invalid_ip.yml  missing_required.json  missing_required.yml
tests/mocks/syslog/valid/: full_implementation.json  partial_implementation.json
tests/mocks/utils/: formatted.json  formatted.yml
tests/mocks/utils/host1/: dns.yml  ntp.yml
tests/mocks/utils/host2/: dns.yml  ntp.yml
tests/mocks/utils/host3/: dns.yml  ntp.yml
tests/mocks/utils/host4/: dns.yml  ntp.yml
utils/: __init__.py  ansible_inventory.py
(+98 files in other folders)
