[tool.poetry]
name = "schema-enforcer"
version = "1.0.1"
description = "Tool/Framework for testing structured data against schema definitions"
authors = ["Network to Code, LLC <info@networktocode.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/networktocode/schema-enforcer"
repository = "https://github.com/networktocode/schema-enforcer"
include = [
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
termcolor = "^1.1.0"
jsonschema = "^3.2.0"
toml = "^0.10.0"
"ruamel.yaml" = "^0.16.10"
jinja2 = "^2.11.2"
jsonref = "^0.2"
pydantic = "^1.6.1"
rich = "^9.5.1"
ansible = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests_mock = "^1.7.0"
pyyaml = "^5.3"
black = "^19.10b0"
pylint = "^2.4.4"
pydocstyle = "^5.0.2"
yamllint = "^1.20.0"
bandit = "^1.6.2"
invoke = "^1.4.1"
flake8 = "^3.8.3"
coverage = "^5.3"

[tool.poetry.scripts]
schema-enforcer = "schema_enforcer.cli:main"
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.pylint.basic]
# No docstrings required for private methods (pylint default) or for test_ functions.
no-docstring-rgx="^(_|test_)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
