[tool.poetry]
name = "schema-enforcer"
version = "1.5.2a0"
description = "Tool/Framework for testing structured data against schema definitions"
authors = ["Network to Code, LLC <info@networktocode.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/networktocode/schema-enforcer"
repository = "https://github.com/networktocode/schema-enforcer"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]
packages = [
    { include = "schema_enforcer" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# Packages
click = ">=8.2.0"
jinja2 = ">=3.1.6,<4.0.0"
jmespath = ">=1.0.1,<2.0.0"
jsonpointer = ">=2.1.0,<3.0.0"
jsonref = ">=1.1.0,<2.0.0"
jsonschema = {version = "^4.6", extras = ["format-nongpl"]}
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.1,<3.0"
rich = ">=9.5"
"ruamel.yaml" = ">=0.18,<0.19"
termcolor = ">=3.2.0"
tomli = { version = "*", markers = "python_version < '3.11'" }  # tomli is included in the stdlib as of Python 3.11
# Match minimum python for ansible-core and ansible packages
# https://docs.ansible.com/ansible-core/devel/reference_appendices/release_and_maintenance.html#ansible-core-support-matrix
ansible-core = { version = ">=2.16.0", optional = true }
ansible = { version = ">=9.0.0", optional = true }

[tool.poetry.extras]
ansible = ["ansible"]
ansible-core = ["ansible-core"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
requests_mock = "*"
pyyaml = "*"
black = "*"
pylint = "*"
pydocstyle = "*"
yamllint = "*"
bandit = "*"
invoke = "*"
flake8 = "*"

[tool.poetry.scripts]
schema-enforcer = "schema_enforcer.cli:main"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.pylint.master]
ignore=".venv"

[tool.pylint.basic]
# No docstrings required for private methods (pylint default) or for test_ functions.
no-docstring-rgx="^(_|test_)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint.SIMILARITIES]
min-similarity-lines = 15

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
